--- a/Fundation2017.vcxproj.filters
+++ b/Fundation2017.vcxproj.filters
@@ -19,6 +19,7 @@
     <ClInclude Include="smart_ptr.h" />
     <ClInclude Include="Sound.h" />
     <ClInclude Include="Vector.h" />
+    <ClInclude Include="Client.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Base.cpp" />
@@ -35,5 +36,6 @@
     <ClCompile Include="Server.cpp" />
     <ClCompile Include="Sound.cpp" />
     <ClCompile Include="WinMain.cpp" />
+    <ClCompile Include="Client.cpp" />
   </ItemGroup>
 </Project>
