ポリゴンの描画を出来るようにした

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@ x64/
 .vs/Fundation2017/v15/ipch/AutoPCH/ab7737696858ef70/SOUND.ipch
 .vs/Fundation2017/v15/ipch/AutoPCH/9cd009b33924e96c/IMAGE.ipch
 .vs/Fundation2017/v15/ipch/AutoPCH/9aabe0fd5b016bde/KEYBOARD.ipch
+.vs/Fundation2017/v15/ipch/AutoPCH/ce69ba35d1156d64/MODEL.ipch
