--- a/Framework.vcxproj.filters
+++ b/Framework.vcxproj.filters
@@ -1,17 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClInclude Include="Vector.h" />
     <ClInclude Include="Sound.h" />
     <ClInclude Include="smart_ptr.h" />
     <ClInclude Include="Server.h" />
-    <ClInclude Include="Random.h" />
     <ClInclude Include="Mouse.h" />
     <ClInclude Include="Model.h" />
     <ClInclude Include="MersenneTwister.h" />
-    <ClInclude Include="Matrix.h" />
     <ClInclude Include="Manager.h" />
-    <ClInclude Include="LoadCSV.h" />
     <ClInclude Include="Keyboard.h" />
     <ClInclude Include="Image.h" />
     <ClInclude Include="Event.h" />
@@ -21,16 +17,15 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Button.h" />
     <ClInclude Include="Base.h" />
+    <ClInclude Include="Mathematics.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="WinMain.cpp" />
     <ClCompile Include="Sound.cpp" />
     <ClCompile Include="Server.cpp" />
-    <ClCompile Include="Random.cpp" />
     <ClCompile Include="Mouse.cpp" />
     <ClCompile Include="Model.cpp" />
     <ClCompile Include="Manager.cpp" />
-    <ClCompile Include="LoadCSV.cpp" />
     <ClCompile Include="Keyboard.cpp" />
     <ClCompile Include="Image.cpp" />
     <ClCompile Include="Drawer.cpp" />
