乱数を返せるクラスを作成 DrawerでFPSの表示と30FPSに固定できるようにした

--- a/Framework.vcxproj.filters
+++ b/Framework.vcxproj.filters
@@ -18,6 +18,7 @@
     <ClInclude Include="Button.h" />
     <ClInclude Include="Base.h" />
     <ClInclude Include="Mathematics.h" />
+    <ClInclude Include="Random.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="WinMain.cpp" />
@@ -32,5 +33,6 @@
     <ClCompile Include="Client.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Button.cpp" />
+    <ClCompile Include="Random.cpp" />
   </ItemGroup>
 </Project>
