--- a/Framework.vcxproj
+++ b/Framework.vcxproj
@@ -33,6 +33,7 @@
     <ClInclude Include="MersenneTwister.h" />
     <ClInclude Include="Model.h" />
     <ClInclude Include="Mouse.h" />
+    <ClInclude Include="Random.h" />
     <ClInclude Include="Server.h" />
     <ClInclude Include="smart_ptr.h" />
     <ClInclude Include="Sound.h" />
@@ -47,6 +48,7 @@
     <ClCompile Include="Manager.cpp" />
     <ClCompile Include="Model.cpp" />
     <ClCompile Include="Mouse.cpp" />
+    <ClCompile Include="Random.cpp" />
     <ClCompile Include="Server.cpp" />
     <ClCompile Include="Sound.cpp" />
     <ClCompile Include="WinMain.cpp" />
