CSVの読み込み機構を作成 読み込みは構造体で行い、データを格納するようにした

--- a/Framework.vcxproj
+++ b/Framework.vcxproj
@@ -28,6 +28,7 @@
     <ClInclude Include="Event.h" />
     <ClInclude Include="Image.h" />
     <ClInclude Include="Keyboard.h" />
+    <ClInclude Include="LoadCSV.h" />
     <ClInclude Include="Manager.h" />
     <ClInclude Include="Mathematics.h" />
     <ClInclude Include="MersenneTwister.h" />
