--- a/Framework.vcxproj
+++ b/Framework.vcxproj
@@ -24,15 +24,18 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Client.h" />
     <ClInclude Include="Data.h" />
+    <ClInclude Include="DirectionalLight.h" />
     <ClInclude Include="Drawer.h" />
     <ClInclude Include="Image.h" />
     <ClInclude Include="Keyboard.h" />
+    <ClInclude Include="Light.h" />
     <ClInclude Include="LoadCSV.h" />
     <ClInclude Include="Manager.h" />
     <ClInclude Include="Mathematics.h" />
     <ClInclude Include="MersenneTwister.h" />
     <ClInclude Include="Model.h" />
     <ClInclude Include="Mouse.h" />
+    <ClInclude Include="PointLight.h" />
     <ClInclude Include="Random.h" />
     <ClInclude Include="Server.h" />
     <ClInclude Include="smart_ptr.h" />
@@ -40,23 +43,28 @@
     <ClInclude Include="Speaker.h" />
     <ClInclude Include="Speaker2D.h" />
     <ClInclude Include="Speaker3D.h" />
+    <ClInclude Include="SpotLight.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Button.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Client.cpp" />
+    <ClCompile Include="DirectionalLight.cpp" />
     <ClCompile Include="Drawer.cpp" />
     <ClCompile Include="Image.cpp" />
     <ClCompile Include="Keyboard.cpp" />
+    <ClCompile Include="Light.cpp" />
     <ClCompile Include="Manager.cpp" />
     <ClCompile Include="Model.cpp" />
     <ClCompile Include="Mouse.cpp" />
+    <ClCompile Include="PointLight.cpp" />
     <ClCompile Include="Random.cpp" />
     <ClCompile Include="Server.cpp" />
     <ClCompile Include="Sound.cpp" />
     <ClCompile Include="Speaker.cpp" />
     <ClCompile Include="Speaker2D.cpp" />
     <ClCompile Include="Speaker3D.cpp" />
+    <ClCompile Include="SpotLight.cpp" />
     <ClCompile Include="WinMain.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
